--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="default_content_margin">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_regular">16dp</dimen>
+    <dimen name="margin_big">24dp</dimen>
+    <dimen name="margin_extra_big">32dp</dimen>
+    <dimen name="default_content_margin">@dimen/margin_regular</dimen>
 </resources>
