--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,19 @@
         <item name="android:windowBackground">@color/bg_black</item>
     </style>
 
+    <style name="Button" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/btn_background</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">@dimen/text_size_regular</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:padding">@dimen/margin_regular</item>
+        <item name="textAllCaps">false</item>
+        <item name="background">@drawable/btn_background</item>
+    </style>
+
+    <style name="Button.Actionable" parent="Button">
+        <item name="android:background">@drawable/btn_background_actionable</item>
+        <item name="android:textColor">@drawable/btn_text_color_actionable</item>
+    </style>
+
 </resources>
