--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar.Bridge">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
         <item name="colorAccent">@color/accent</item>
@@ -13,17 +13,22 @@
         <item name="android:textSize">@dimen/text_size_regular</item>
         <item name="android:textColor">@color/gray</item>
         <item name="android:padding">@dimen/margin_regular</item>
-        <item name="textAllCaps">false</item>
         <item name="background">@drawable/btn_background</item>
+        <item name="textAllCaps">false</item>
     </style>
 
     <style name="Button.Actionable" parent="Button">
         <item name="android:background">@drawable/btn_background_actionable</item>
+        <item name="background">@drawable/btn_background_actionable</item>
         <item name="android:textColor">@drawable/btn_text_color_actionable</item>
     </style>
 
-    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
+    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="colorControlNormal">@color/accent</item>
+        <item name="boxCornerRadiusTopStart">@dimen/button_corner_radius</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/button_corner_radius</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/button_corner_radius</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/button_corner_radius</item>
     </style>
 
 </resources>
