--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title_input_hint_login"
+                style="@style/TextInputEditText"
                 android:textSize="@dimen/text_size_regular" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title_input_hint_password"
+                style="@style/TextInputEditText"
                 android:textSize="@dimen/text_size_regular" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,6 +67,7 @@
         android:layout_gravity="bottom"
         android:layout_marginBottom="16dp"
         android:enabled="false"
-        android:text="@string/title_sign_in" />
+        android:text="@string/title_sign_in"
+        tools:enabled="true" />
 
 </FrameLayout>
