--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,11 @@
         <item name="boxCornerRadiusBottomEnd">@dimen/button_corner_radius</item>
     </style>
 
+    <style name="TextInputEditText"  parent="Widget.AppCompat.EditText">
+        <item name="android:padding">18dp</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:lines">1</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
 </resources>
