--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title_input_hint_password"
+                android:drawableEnd="@drawable/ic_eye"
                 style="@style/TextInputEditText"
                 android:textSize="@dimen/text_size_regular" />
         </com.google.android.material.textfield.TextInputLayout>
