--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,10 +38,11 @@
             android:layout_marginTop="@dimen/margin_extra_big">
 
             <com.google.android.material.textfield.TextInputEditText
+                style="@style/TextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title_input_hint_login"
-                style="@style/TextInputEditText"
+                android:inputType="textEmailAddress"
                 android:textSize="@dimen/text_size_regular" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -48,14 +50,16 @@
             style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_big">
+            android:layout_marginTop="@dimen/margin_big"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/gray_light">
 
             <com.google.android.material.textfield.TextInputEditText
+                style="@style/TextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title_input_hint_password"
-                android:drawableEnd="@drawable/ic_eye"
-                style="@style/TextInputEditText"
+                android:inputType="textPassword"
                 android:textSize="@dimen/text_size_regular" />
         </com.google.android.material.textfield.TextInputLayout>
 
