--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="accent">@color/orange</color>
 
     <color name="gray">#656D8A</color>
+    <color name="gray_light">#DADADA</color>
     <color name="light">#E7EDFF</color>
     <color name="green">#17B913</color>
     <color name="orange">#FE4E27</color>
