--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
     </style>
 
     <style name="Button" parent="Widget.AppCompat.Button">
+        <item name="fontFamily">@font/roboto_medium</item>
         <item name="android:background">@drawable/btn_background</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/text_size_regular</item>
@@ -24,6 +25,7 @@
     </style>
 
     <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="fontFamily">@font/roboto</item>
         <item name="android:textColor">@color/light</item>
         <item name="hintTextColor">@color/gray</item>
         <item name="boxStrokeColor">@color/purple</item>
@@ -34,10 +36,18 @@
     </style>
 
     <style name="TextInputEditText"  parent="Widget.AppCompat.EditText">
+        <item name="fontFamily">@font/roboto</item>
         <item name="android:padding">18dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:lines">1</item>
         <item name="android:singleLine">true</item>
+    </style>
+
+
+    <style name="Title" >
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">@dimen/text_size_title</item>
+        <item name="android:textColor">@color/light</item>
     </style>
 
 </resources>
