--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,8 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
-            android:text="@string/title_welcome"
-        />
+            android:fontFamily="@font/roboto_bold"
+            android:text="@string/title_welcome" />
 
         <TextView
             android:layout_width="match_parent"
