--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,17 @@
                 android:textSize="@dimen/text_size_regular" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_regular"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:fontFamily="@font/roboto"
+            android:textColor="@color/red"
+            tools:text="@string/title_invalid_login_or_password_error"
+            android:textSize="@dimen/text_size_regular" />
+
     </LinearLayout>
 
     <Button
