--- a/features/login/src/main/res/layout/activity_login.xml
+++ b/features/login/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_marginStart="@dimen/default_content_margin"
     android:layout_marginEnd="@dimen/default_content_margin"
-    tools:context=".MainActivity">
+    tools:context="com.lockwood.themoviedb.login.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,8 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_big"
             android:fontFamily="@font/roboto"
-            android:textColor="@color/light"
             android:text="@string/title_login_hint"
+            android:textColor="@color/light"
             android:textSize="@dimen/text_size_regular" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -66,12 +66,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_regular"
-            android:visibility="gone"
-            tools:visibility="visible"
             android:fontFamily="@font/roboto"
             android:textColor="@color/red"
+            android:textSize="@dimen/text_size_regular"
+            android:visibility="gone"
             tools:text="@string/title_invalid_login_or_password_error"
-            android:textSize="@dimen/text_size_regular" />
+            tools:visibility="visible" />
 
     </LinearLayout>
 
