Добавить BaseMobiusFragment и применить его к LoginFragment

--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -33,6 +33,7 @@
             android:layout_marginTop="@dimen/margin_extra_big">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/loginEditText"
                 style="@style/TextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,6 +51,7 @@
             app:passwordToggleTint="@color/gray_light">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordEditText"
                 style="@style/TextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -59,6 +61,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/errorView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_regular"
@@ -72,6 +75,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/signInButton"
         style="@style/Button.Actionable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
