--- a/features/login/src/main/res/layout/activity_login.xml
+++ b/features/login/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context="com.lockwood.themoviedb.login.presentation.LoginActivity">
 
-    <androidx.fragment.app.FragmentContainerView
+    <fragment
         android:id="@+id/container"
         android:name="com.lockwood.themoviedb.login.presentation.LoginFragment"
         android:layout_width="match_parent"
