--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="Button" parent="Widget.AppCompat.Button">
-        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textAppearance">@style/Medium</item>
         <item name="android:background">@drawable/btn_background</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/text_size_regular</item>
@@ -20,7 +20,7 @@
     </style>
 
     <style name="Title">
-        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textAppearance">@style/Medium</item>
         <item name="android:textSize">@dimen/text_size_title</item>
         <item name="android:textColor">@color/light</item>
         <item name="android:layout_marginTop">11dp</item>
