--- a/features/login/src/main/res/values/styles.xml
+++ b/features/login/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
     </style>
 
     <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-        <item name="fontFamily">@font/roboto</item>
+        <item name="android:textAppearance">@style/Regular</item>
         <item name="android:textColor">@color/light</item>
         <item name="hintTextColor">@color/gray</item>
         <item name="boxStrokeColor">@color/purple</item>
@@ -18,7 +18,7 @@
     </style>
 
     <style name="TextInputEditText" parent="Widget.AppCompat.EditText">
-        <item name="fontFamily">@font/roboto</item>
+        <item name="android:textAppearance">@style/Regular</item>
         <item name="android:padding">18dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:lines">1</item>
