Добавить AppToolsProvider для предоставления контекста приложения через Component dependencies

--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -74,7 +74,7 @@
 
     </LinearLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/login_sign_in_button"
         style="@style/Button.Actionable"
         android:layout_width="match_parent"
