--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="green">#17B913</color>
     <color name="orange">#FE4E27</color>
     <color name="dark_blue">#2A2E42</color>
+    <color name="dark_blue_light">#282C3F</color>
     <color name="yellow">#FFCD1B</color>
     <color name="bg_black">#191A25</color>
     <color name="red">#E1172F</color>
