--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:background">@drawable/btn_background</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">@dimen/text_size_regular</item>
-        <item name="android:textColor">@color/gray</item>
+        <item name="android:textColor">@color/purple</item>
         <item name="android:padding">19dp</item>
         <item name="background">@drawable/btn_background</item>
         <item name="textAllCaps">false</item>
