--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:fitsSystemWindows="true"
     tools:context="com.lockwood.themoviedb.ui.MainActivity">
 
+    <include layout="@layout/include_app_bar" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_container"
         android:layout_width="match_parent"
