--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,19 @@
         <item name="android:background">@color/dark_blue_light</item>
         <item name="itemIconTint">@color/bottom_navigation_colors</item>
         <item name="itemTextColor">@color/bottom_navigation_colors</item>
+        <item name="background">@color/dark_blue_light</item>
+    </style>
+
+    <style name="AppBar.Transparent" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="android:elevation">0dp</item>
+        <item name="elevation">0dp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:colorPrimary">@android:color/transparent</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="background">@android:color/transparent</item>
+        <item name="colorPrimary">@android:color/transparent</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="android:outlineProvider">none</item>
     </style>
 
 </resources>
