--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/login_fragment_root"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
     tools:context="com.lockwood.themoviedb.login.presentation.ui.LoginActivity">
