--- a/features/login/src/main/res/layout/activity_login.xml
+++ b/features/login/src/main/res/layout/activity_login.xml
@@ -17,13 +17,21 @@
         android:layout_marginBottom="@dimen/margin_regular"
         tools:layout="@layout/fragment_login" />
 
-    <androidx.core.widget.ContentLoadingProgressBar
+    <FrameLayout
         android:id="@+id/login_progress_bar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:theme="@style/AppTheme"
-        android:visibility="gone" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/gray_transparent"
+        android:visibility="gone"
+        tools:visibility="gone">
+
+        <androidx.core.widget.ContentLoadingProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:theme="@style/AppTheme" />
+
+    </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
