--- a/features/login/src/main/res/layout/activity_login.xml
+++ b/features/login/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:id="@+id/login_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/gray_transparent"
+        android:background="@color/black_transparent"
         android:visibility="gone"
         tools:visibility="gone">
 
