--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 
         <fragment
             android:id="@+id/main_container"
-            android:name="com.lockwood.themoviedb.movies.presentation.ui.search.SearchFragment"
+            android:name="com.lockwood.themoviedb.user.presentation.ui.UserFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
