Навигацию экрана авторизации так же надо перевести на Android Navigation Component

--- a/features/movies/src/main/res/layout/fragment_favorite_movies.xml
+++ b/features/movies/src/main/res/layout/fragment_favorite_movies.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/favorite_title"
         style="@style/Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/favorite_title_empty"
         style="@style/Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -30,10 +30,10 @@
         android:textSize="@dimen/text_size_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/favorite_title_search"
         style="@style/Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,10 +43,10 @@
         android:textColor="@color/purple"
         android:textSize="@dimen/text_size_medium"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/favorite_title_empty" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/favorite_image_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="60dp"
@@ -58,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/favorite_title_search"
         tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
