--- a/features/movies/src/main/res/layout/item_movie.xml
+++ b/features/movies/src/main/res/layout/item_movie.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- TODO: заменить FilledBox на OutlinedBox -->
+    <!-- TODO: настроить стиль TextInputLayout -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/search_input_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_content_margin"
+        android:layout_marginTop="@dimen/margin_extra_big"
+        android:layout_marginEnd="@dimen/default_content_margin">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/search_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/title_movies_search"
+            android:inputType="textAutoCorrect"
+            android:textSize="@dimen/text_size_regular" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+</FrameLayout>
