Реализовать Поиск  через  подход с одним состоянием

--- a/features/movies/src/main/res/layout/fragment_favorite_movies.xml
+++ b/features/movies/src/main/res/layout/fragment_favorite_movies.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
         android:layout_marginEnd="@dimen/default_content_margin"
+        android:paddingBottom="42dp"
         android:text="@string/title_favorite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +24,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
-        android:layout_marginTop="42dp"
         android:layout_marginEnd="@dimen/default_content_margin"
         android:text="@string/title_favorite_empty"
         android:textColor="@color/light"
