--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,10 @@
     android:fitsSystemWindows="true"
     tools:context=".presentation.ui.MainActivity">
 
-    <include layout="@layout/include_app_bar" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginTop="@dimen/margin_extra_big"
         android:orientation="vertical">
 
         <fragment
