--- a/features/movies/src/main/res/layout/fragment_search.xml
+++ b/features/movies/src/main/res/layout/fragment_search.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
         android:layout_marginEnd="@dimen/default_content_margin"
+        android:paddingBottom="@dimen/margin_extra_big"
         android:text="@string/title_search_any_movie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +37,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_content_margin"
-        android:layout_marginTop="@dimen/margin_extra_big"
         android:layout_marginEnd="@dimen/default_content_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
