--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -33,6 +33,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_title_text_view" />
 
+    <!-- region Login input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/login_input_layout"
         style="@style/TextInputLayout"
@@ -52,7 +53,9 @@
             android:inputType="textEmailAddress"
             android:textSize="@dimen/text_size_regular" />
     </com.google.android.material.textfield.TextInputLayout>
+    <!-- endregion -->
 
+    <!-- region Password input -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_input_layout"
         style="@style/TextInputLayout"
@@ -74,6 +77,7 @@
             android:inputType="textPassword"
             android:textSize="@dimen/text_size_regular" />
     </com.google.android.material.textfield.TextInputLayout>
+    <!-- endregion -->
 
     <TextView
         android:id="@+id/login_error_text_view"
