--- a/features/movies/src/main/res/layout/fragment_favorite_movies.xml
+++ b/features/movies/src/main/res/layout/fragment_favorite_movies.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/search_title"
+        android:id="@+id/favorite_title"
         style="@style/Title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -18,6 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- region Empty favorite movies title -->
     <TextView
         android:id="@+id/favorite_title_empty"
         style="@style/Medium"
@@ -30,7 +31,7 @@
         android:textSize="@dimen/text_size_regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_title" />
+        app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
 
     <TextView
         android:id="@+id/favorite_title_search"
@@ -44,9 +45,10 @@
         android:textSize="@dimen/text_size_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorite_title_empty" />
+    <!-- endregion -->
 
     <ImageView
-        android:id="@+id/search_image_view"
+        android:id="@+id/favorite_image_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="60dp"
