--- a/features/movies/src/main/res/layout/fragment_search.xml
+++ b/features/movies/src/main/res/layout/fragment_search.xml
@@ -1,46 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/margin_extra_big"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/search_image_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/search_image_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="120dp"
         android:scaleType="fitEnd"
         android:src="@drawable/ic_search_background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/search_title"
-        style="@style/Title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/default_content_margin"
-        android:layout_marginEnd="@dimen/default_content_margin"
-        android:paddingBottom="@dimen/margin_extra_big"
-        android:text="@string/title_search_any_movie"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <include
-        android:id="@+id/search_input_layout"
-        layout="@layout/include_search"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/default_content_margin"
-        android:layout_marginEnd="@dimen/default_content_margin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_title" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <!-- region Search input with title -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/search_title"
+                style="@style/Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_content_margin"
+                android:layout_marginEnd="@dimen/default_content_margin"
+                android:paddingBottom="@dimen/margin_extra_big"
+                android:text="@string/title_search_any_movie"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <include
+                android:id="@+id/search_input_layout"
+                layout="@layout/include_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_content_margin"
+                android:layout_marginEnd="@dimen/default_content_margin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/search_title" />
+
+        </LinearLayout>
+        <!-- endregion -->
+
+        <!-- region Movies list fragment -->
+
+        <!-- endregion -->
+
+    </LinearLayout>
+
+</FrameLayout>
