Добавить search_graph

--- a/features/movies/src/main/res/layout/fragment_search.xml
+++ b/features/movies/src/main/res/layout/fragment_search.xml
@@ -54,8 +54,22 @@
         </LinearLayout>
         <!-- endregion -->
 
-        <!-- region Movies list fragment -->
+        <!-- region Movies list and Movie fragment -->
+        <FrameLayout
+            android:id="@+id/search_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
+            <fragment
+                android:id="@+id/search_nav_host_fragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:navGraph="@navigation/search_graph"
+                tools:ignore="FragmentTagUsage"
+                tools:layout="@layout/fragment_movie" />
+        </FrameLayout>
         <!-- endregion -->
 
     </LinearLayout>
