--- a/core/src/main/res/navigation/home_graph.xml
+++ b/core/src/main/res/navigation/home_graph.xml
@@ -6,14 +6,6 @@
 
     <fragment
         android:id="@+id/input_search"
-        android:name="com.lockwood.themoviedb.movies.presentation.ui.search.SearchFragment">
-        <action
-            android:id="@+id/input_movie_name"
-            app:destination="@id/movies" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/movies"
-        android:name="com.lockwood.themoviedb.movies.presentation.ui.list.MoviesFragment" />
+        android:name="com.lockwood.themoviedb.movies.presentation.ui.search.SearchFragment" />
 
 </navigation>
