обновить фграменты в навигации

--- a/core/src/main/res/navigation/home_graph.xml
+++ b/core/src/main/res/navigation/home_graph.xml
@@ -6,6 +6,18 @@
 
     <fragment
         android:id="@+id/input_search"
-        android:name="com.lockwood.themoviedb.movies.presentation.ui.search.SearchFragment" />
+        android:name="com.lockwood.themoviedb.movies.presentation.ui.search.SearchFragment">
+        <action
+            android:id="@+id/open_movie"
+            app:destination="@id/movie" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/movie"
+        android:name="com.lockwood.themoviedb.movies.presentation.ui.MovieFragment">
+        <argument
+            android:name="movieIdArg"
+            app:argType="integer" />
+    </fragment>
 
 </navigation>
